<resources>
    <string name="app_name">MyApps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Apps</string>
    <string name="nav_header_subtitle">conjunto de aplicaciones</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_juegos">Juegos</string>
    <string name="menu_fotos">Fotos</string>
    <string name="menu_musica">Musica</string>
    <string name="menu_video">Video</string>
    <string name="menu_sensores">Sensores</string>
    <string name="menu_mapas">Mapas</string>

    <string name="nombreApellidos">Adrián Sánchez-Cruzado Cerro</string>
    <string name="decripcionHome">Una App que engloba multitud de funciones que iremos añadiendo a lo largo del curso.</string>
    <string name="tituloHome">Bienvenid@s a MyApps</string>
    <string name="usuario">Nombre de Usuario: </string>
    <string name="email">Correo Electronico: </string>
    <string name="enviar">Enviar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="string_google_maps_key">AIzaSyDEHE2mlPAI6UdmWChbvYy60_1moW1BZ_4</string>
    <string name="title_activity_maps">Map</string>
</resources>
